--- a/src/main/frontend/studentBorrowBook.html
+++ b/src/main/frontend/studentBorrowBook.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>student_menu</title>
+    <title>Borrow Book</title>
     <style>
         .container {
             display: grid;
@@ -31,19 +31,6 @@
             grid-area: accountInfo; background-color: #6c6c69
         }
 
-        .account{
-            height: 100%;
-            width: 0;
-            position: fixed;
-            z-index: 1;
-            top: 0;
-            right: 0;
-            background-color: #868886;
-            overflow-x: hidden;
-            transition: 0.5s;
-            padding-top: 60px;
-        }
-
         .accountButton {
             background-color: #4CAF50;
             border: none;
@@ -59,13 +46,17 @@
             right:1rem;
         }
 
-/*        .accountInfo a {
-            color: black;
-            position: absolute;
-            top:1rem;
-            right:1rem;
-            cursor: pointer;
-        }*/
+        .step{
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: right;
+            text-decoration: none;
+            font-size: 16px;
+            margin: 2rem 2rem;
+        }
+
 
         .crossButton a {
             padding: 8px 8px 8px 32px;
@@ -74,6 +65,7 @@
             color: #818181;
             display: block;
             transition: 0.3s;
+            cursor: pointer;
         }
 
         .logout a{
@@ -115,12 +107,35 @@
             padding: 16px;
         }
 
+        .returnToMenu {
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: right;
+            text-decoration: none;
+            font-size: 16px;
+            margin: 2rem 2rem;
+            cursor: pointer;
+        }
+
+        form.step2 {
+            border:white;
+            margin:3rem;
+        }
+
+        iframe {
+            width: 80%;
+            height: 20rem;
+            margin: 3rem 3rem;
+        }
+
     </style>
 </head>
 <body>
 <div class="container">
     <div id="header" class="topOfThePage">
-        <h2 style="text-align:left; margin:2%; color:white">Home (Student)</h2>
+        <h2 style="text-align:left; margin:2%; color:white">Borrow Book</h2>
         <button class="accountButton" onclick="openNav()">&#9776; Account</button>
     </div>
     <div id="account" class="accountInfo">
@@ -131,13 +146,23 @@
         <h5>Current Borrowed Book(s):</h5> <p>you are not currently borrowing book(s) right now</p>
         <a id="logout" onclick="logout()">Log out</a>
     </div>
+
     <div class="menu serviceOption">
-        <a href="studentBorrowBook.html">Borrow Book</a>
-        <a href="#">Return Book</a>
-        <a href="#">Extend Return Date</a>
-        <a href="#">Change Password</a>
+        <p ><span class="step">Step 1</span>Search A Book</p>
+        <iframe src="searchBook.html" height="200" width="300" title="searchBook" ></iframe>
+        <p ><span class="step">Step 2</span>Input Book ID of the book that you want to borrow</p>
+        <form class="step2">
+            <label for="bookid">Book ID:</label>
+            <input type="text" id="bookid" name="bookid">
+            <input id="Borrow" name="borrow" type="button" value="borrow">
+        </form>
+
+
     </div>
-    <div class="messages" id="message"></div>
+
+    <div class="messages" id="message">
+        <button id="returnToMenu" class="returnToMenu" onclick="goToMenu()">Go Back To Menu</button>
+    </div>
 
 
 </div>
@@ -160,4 +185,10 @@
     function logout() {
         location.href = "login.html"
     }
+
+    function goToMenu() {
+        location.href = "studentMenu.html"
+    }
+
+
 </script>
