--- a/src/main/frontend/student_change_password.html
+++ b/src/main/frontend/student_change_password.html
@@ -47,18 +47,6 @@
             right:1rem;
         }
 
-        .step{
-            background-color: #4CAF50;
-            border: none;
-            color: white;
-            padding: 15px 32px;
-            font-family: sans-serif;
-            text-align: right;
-            text-decoration: none;
-            font-size: 16px;
-            margin: 2rem 2rem;
-        }
-
 
         .crossButton a {
             padding: 8px 8px 8px 32px;
@@ -77,26 +65,6 @@
             color: #818181;
             display: block;
             transition: 0.3s;
-        }
-
-        .account a:hover {
-            color: #f1f1f1;
-        }
-
-
-        .serviceOption a {
-            display: block;
-            color: #ffffff;
-            padding: 14px;
-            text-decoration: none;
-            font-size: 17px;
-            border-radius: 5px;
-            text-align:center
-        }
-
-        .serviceOption a:hover {
-            background-color: #ddd;
-            color: black;
         }
 
 
@@ -122,10 +90,22 @@
             margin:3rem;
         }
 
+        .pass_box{
+            border:black;
+            margin:1rem;
+            text-align: right;}
+
         iframe {
             width: 80%;
             height: 20rem;
             margin: 3rem 3rem;
+        }
+
+        label{
+            width: 200px;
+            text-align: right;
+            display: inline-block;
+            color: white;
         }
 
     </style>
@@ -133,7 +113,7 @@
 <body onload="closeNav()">
 <div class="container">
     <div id="header" class="topOfThePage">
-        <h2 style="text-align:left; margin:2%; color:white">Borrow Book</h2>
+        <h2 style="text-align:left; margin:2%; color:white">Change password</h2>
         <button class="accountButton" onclick="openNav()">&#9776; Account</button>
     </div>
     <div id="account" class="accountInfo">
@@ -145,14 +125,15 @@
         <a id="logout" onclick="logout()">Log out</a>
     </div>
 
-    <div class="menu serviceOption">
-        <p style="color: white"><span class="step">Step 1</span>Search A Book</p>
-        <iframe src="searchBook.html" height="200" width="300" title="searchBook" ></iframe>
-        <p style="color: white"><span class="step">Step 2</span>Input Book ID of the book that you want to borrow</p>
+    <div class="menu">
         <form class="step2">
-            <label style="color: white" for="bookid">Book ID:</label>
-            <input type="text" id="bookid" name="bookid">
-            <input id="Borrow" name="borrow" type="button" value="borrow">
+            <label for="old_password">Please input your old password:</label>
+            <input class="pass_box" type="text" id="old_password" name="old_password"><br><br>
+            <label for="new_password">Please input your new password:</label>
+            <input class="pass_box" type="text" id="new_password" name="new_password"><br><br>
+            <label for="confirm_password">Please confirm your new password:</label>
+            <input class="pass_box" type="text" id="confirm_password" name="new_password">
+            <input id="change_password" name="change" type="button" value="change">
         </form>
 
 
