--- a/src/main/frontend/studentReturnBook.html
+++ b/src/main/frontend/studentReturnBook.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Borrow Book</title>
+    <title>Student return book</title>
     <style>
         .container {
             display: grid;
-            grid-template-columns: 0.9fr 2.1fr 0fr;
-            grid-template-rows: 0.3fr 2.2fr 0.5fr;
+            grid-template-columns: 0.9fr 2.9fr 0fr;
+            grid-template-rows: 0.3fr 2.2fr 0fr;
             gap: 0 0;
             grid-auto-flow: column;
             grid-template-areas:
@@ -36,7 +35,6 @@
             border: none;
             color: white;
             padding: 15px 32px;
-            font-family: sans-serif;
             text-align: right;
             text-decoration: none;
             font-size: 16px;
@@ -47,19 +45,6 @@
             right:1rem;
         }
 
-        .step{
-            background-color: #4CAF50;
-            border: none;
-            color: white;
-            padding: 15px 32px;
-            font-family: sans-serif;
-            text-align: right;
-            text-decoration: none;
-            font-size: 16px;
-            margin: 2rem 2rem;
-        }
-
-
         .crossButton a {
             padding: 8px 8px 8px 32px;
             text-decoration: none;
@@ -67,7 +52,6 @@
             color: #818181;
             display: block;
             transition: 0.3s;
-            cursor: pointer;
         }
 
         .logout a{
@@ -79,26 +63,13 @@
             transition: 0.3s;
         }
 
-        .account a:hover {
-            color: #f1f1f1;
+        .message {
+            text-align: center;
+            font-size: 30px;
+            margin: 3rem 3rem;
+            color: #eeeaea;
+
         }
-
-
-        .serviceOption a {
-            display: block;
-            color: #ffffff;
-            padding: 14px;
-            text-decoration: none;
-            font-size: 17px;
-            border-radius: 5px;
-            text-align:center
-        }
-
-        .serviceOption a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
 
         #header {
             transition: margin-left .5s;
@@ -117,23 +88,12 @@
             cursor: pointer;
         }
 
-        form.step2 {
-            border:white;
-            margin:3rem;
-        }
-
-        iframe {
-            width: 80%;
-            height: 20rem;
-            margin: 3rem 3rem;
-        }
-
     </style>
 </head>
 <body onload="closeNav()">
 <div class="container">
     <div id="header" class="topOfThePage">
-        <h2 style="text-align:left; margin:2%; color:white">Borrow Book</h2>
+        <h2 style="text-align:left; margin:2%; color:white">Return Book</h2>
         <button class="accountButton" onclick="openNav()">&#9776; Account</button>
     </div>
     <div id="account" class="accountInfo">
@@ -144,27 +104,17 @@
         <h5>Current Borrowed Book(s):</h5> <p>you are not currently borrowing book(s) right now</p>
         <a id="logout" onclick="logout()">Log out</a>
     </div>
-
-    <div class="menu serviceOption">
-        <p style="color: white"><span class="step">Step 1</span>Search A Book</p>
-        <iframe src="searchBook.html" height="200" width="300" title="searchBook" ></iframe>
-        <p style="color: white"><span class="step">Step 2</span>Input Book ID of the book that you want to borrow</p>
-        <form class="step2">
-            <label style="color: white" for="bookid">Book ID:</label>
-            <input type="text" id="bookid" name="bookid">
-            <input id="Borrow" name="borrow" type="button" value="borrow">
-        </form>
-
-
+    <div class="menu">
+        <h3 class="message">Please drop off the book that you wish to return to the Library, your borrow status should be updated in
+        two business days.</h3>
     </div>
-
     <div class="messages" id="message">
         <button id="returnToMenu" class="returnToMenu" onclick="goToMenu()">Go Back To Menu</button>
     </div>
 
 
-</div>
 
+</div>
 </body>
 </html>
 
@@ -184,9 +134,8 @@
         location.href = "login.html"
     }
 
+
     function goToMenu() {
         location.href = "studentMenu.html"
     }
-
-
 </script>
