--- a/src/main/frontend/stuffMenu.html
+++ b/src/main/frontend/stuffMenu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Borrow Book</title>
+    <title>student_menu</title>
     <style>
         .container {
             display: grid;
@@ -36,7 +36,6 @@
             border: none;
             color: white;
             padding: 15px 32px;
-            font-family: sans-serif;
             text-align: right;
             text-decoration: none;
             font-size: 16px;
@@ -47,18 +46,13 @@
             right:1rem;
         }
 
-        .step{
-            background-color: #4CAF50;
-            border: none;
-            color: white;
-            padding: 15px 32px;
-            font-family: sans-serif;
-            text-align: right;
-            text-decoration: none;
-            font-size: 16px;
-            margin: 2rem 2rem;
-        }
-
+        /*        .accountInfo a {
+                    color: black;
+                    position: absolute;
+                    top:1rem;
+                    right:1rem;
+                    cursor: pointer;
+                }*/
 
         .crossButton a {
             padding: 8px 8px 8px 32px;
@@ -67,7 +61,6 @@
             color: #818181;
             display: block;
             transition: 0.3s;
-            cursor: pointer;
         }
 
         .logout a{
@@ -105,62 +98,28 @@
             padding: 16px;
         }
 
-        .returnToMenu {
-            background-color: #4CAF50;
-            border: none;
-            color: white;
-            padding: 15px 32px;
-            text-align: right;
-            text-decoration: none;
-            font-size: 16px;
-            margin: 2rem 2rem;
-            cursor: pointer;
-        }
-
-        form.step2 {
-            border:white;
-            margin:3rem;
-        }
-
-        iframe {
-            width: 80%;
-            height: 20rem;
-            margin: 3rem 3rem;
-        }
-
     </style>
 </head>
 <body onload="closeNav()">
 <div class="container">
     <div id="header" class="topOfThePage">
-        <h2 style="text-align:left; margin:2%; color:white">Borrow Book</h2>
+        <h2 style="text-align:left; margin:2%; color:white">Home (Stuff)</h2>
         <button class="accountButton" onclick="openNav()">&#9776; Account</button>
     </div>
     <div id="account" class="accountInfo">
         <a id="crossButton" class="closebtn" onclick="closeNav()">&times;</a>
         <h5>Username:</h5> <p>admin</p>
-        <h5>User Type:</h5> <p>student</p>
+        <h5>User Type:</h5> <p>stuff</p>
         <h5>Credit Score:</h5> <p>100</p>
-        <h5>Current Borrowed Book(s):</h5> <p>you are not currently borrowing book(s) right now</p>
-        <a id="logout" onclick="logout()">Log out</a>
+        <button id="logout" onclick="logout()">Log out</button>
     </div>
-
     <div class="menu serviceOption">
-        <p style="color: white"><span class="step">Step 1</span>Search A Book</p>
-        <iframe src="searchBook.html" height="200" width="300" title="searchBook" ></iframe>
-        <p style="color: white"><span class="step">Step 2</span>Input Book ID of the book that you want to borrow</p>
-        <form class="step2">
-            <label style="color: white" for="bookid">Book ID:</label>
-            <input type="text" id="bookid" name="bookid">
-            <input id="Borrow" name="borrow" type="button" value="borrow">
-        </form>
-
-
+        <a href="#">Return Book</a>
+        <a href="#">Add new Book</a>
+        <a href="#">Change student password</a>
+        <a href="#">change my password</a>
     </div>
-
-    <div class="messages" id="message">
-        <button id="returnToMenu" class="returnToMenu" onclick="goToMenu()">Go Back To Menu</button>
-    </div>
+    <div class="messages" id="message"></div>
 
 
 </div>
@@ -183,10 +142,4 @@
     function logout() {
         location.href = "login.html"
     }
-
-    function goToMenu() {
-        location.href = "studentMenu.html"
-    }
-
-
 </script>
